...
    <string name="title_activity_calibration_check_in">Calibration Activity</string>
    <string name="title_activity_usb_connected">USB Connected Activity</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_hint">Snooze alert for x minutes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="pref_sensor_location_dont_ask_again">Don\'t ask me that again</string>

    <string name="title_activity_error">"Error and Event List"</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_fake_numbers">Fake Numbers</string>
    <string name="title_activity_edit_alert">Edit Alert</string>
...
    <string name="bluereaderuglystate">The blueReader was found in an ugly state! It will be now turn off now, and you turn it back to on (short press of the button). After that the blueReader should work as expected!</string>
    <string name="offical_msg">The official app</string>
    <string name="aggressive_power_manager">Your device has an aggressive power management app. Normally accessed via system settings. Please make sure xDrip is excluded from background restrictions.</string>
    <string name="use_conflict_msg">may try to access the transmitter device too and this can cause problems with both apps</string>
    <string name="use_confict_msg_glimp">You can adjust Glimp Settings: options -> devices -> unselect Bluetooth option</string>
    <string name="eng_mode_is_on">Engineering mode is enabled.  Please disable it unless you are certain you need it as it may cause unexpected behavior.</string>
    <string name="yes">Yes</string>
    <string name="enable">Enable</string>
    <string name="xdrip_compatible_features">xDrip %s Features</string>
    <string name="garmin">Garmin</string>
    <string name="fitbit">Fitbit</string>
    <string name="enable_local_web_server_feature">Enable local web server feature for Garmin watchface?</string>
    <string name="enable_local_web_server_feature_fitbit">Enable local web server feature for Fitbit watchface?</string>
...
    <string name="libre_patched">Libre2 Patched</string>
    <string name="librealarm_app_using_sony_smartwatch">LibreAlarm App: using Sony smartwatch</string>
    <string name="__data_source_disabled">\n DATA SOURCE DISABLED</string>
    <string name="data_source_is_set_to_">Data Source is set to: </string>
    <string name="__do_you_want_to_change_settings_or_start_sensor">\n\nDo you want to change settings or start sensor?</string>
    <string name="change_settings">Change settings</string>
    <string name="do_you_want_to_delete_and_reset_the_calibrations_for_this_sensor">Do you want to delete and reset the calibrations for this sensor?</string>
    <string name="sensor_stop_confirm">Do you want to stop the sensor?</string>
    <string name="sensor_stop_confirm_norestart">You will not be able to simply restart the sensor.</string>
    <string name="sensor_stop_confirm_really_norestart">WARNING!\n\nYou will not be able to restart the device.</string>
    <string name="you_have_an_old_experimental_glucose_prediction_setting_enabled__this_is_not_recommended_and_could_mess_things_up_badly__shall_i_disable_this_for_you">You have an old experimental glucose prediction setting enabled.\n\nThis is NOT RECOMMENDED and could mess things up badly.\n\nShall I disable this for you?</string>
    <string name="settings_issue">Settings Issue!</string>
    <string name="do_you_want_to_use_this_synced_fingerstick_blood_glucose_result_to_calibrate_with__you_can_change_when_this_dialog_is_displayed_in_settings">Do you want to use this synced finger-stick blood glucose result to calibrate with?\n\n(you can change when this dialog is displayed in Settings)</string>
    <string name="use_bg_for_calibration">Use BG for Calibration?</string>
    <string name="do_you_want_to_use_this_entered_fingerstick_blood_glucose_test_to_calibrate_with__you_can_change_when_this_dialog_is_displayed_in_settings">Do you want to use this entered finger-stick blood glucose test to calibrate with?\n\n(you can change when this dialog is displayed in Settings)</string>
...
