...
        )
        Button(
            onClick = { showStopConfirm = true },
            modifier = Modifier
                .align(Alignment.CenterHorizontally)
                .padding(top = 30.dp)
                .testTag("stop_sensor_stop"),
        ) {
            Text(context.getString(R.string.stop_sensor))
        }
        if (resettableCals) {
            Button(
                onClick = { showResetConfirm = true },
                modifier = Modifier
                    .align(Alignment.CenterHorizontally)
                    .padding(top = 20.dp)
                    .testTag("stop_sensor_reset"),
            ) {
                Text(context.getString(R.string.dont_stop_just_reset_all_calibrations))
            }
        }
    }

...
